--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- TITLE OF THE PRESENTATION -->
   <!-- ============================================================ -->
   <title>
-    CHANGE THIS!
+    The Fatiando a Terra project | BIRS 2023
   </title>
   <!-- ============================================================ -->
 
@@ -31,7 +31,7 @@
   <link rel="stylesheet/less" type="text/css" href="css/style.less">
 
   <!-- Plausible analytics for anonymous usage statistics -->
-  <script defer data-domain="leouieda.com" src="https://plausible.io/js/plausible.js"></script>
+  <script defer data-domain="fatiando.org" src="https://plausible.io/js/plausible.js"></script>
 </head>
 
 <body>
